# fox-kernel

./: Cargo.toml  README.md
.cargo/: config.toml
src/: dbg_serial.rs  lib.rs  main.rs
src/drivers/: mod.rs
src/drivers/display/: vga.rs
src/drivers/qemu_serial/: serial.rs
src/kernel/: delay.rs  gdt.rs  interrupts.rs  mod.rs  panic.rs
tests/: README.md  basic.rs  stack_overflow.rs
